--- a/data/config.json
+++ b/data/config.json
@@ -2,7 +2,6 @@
   "test_mode": false,
   "webhook_enabled": true,
   "players": {
-    "aws4F": 181792547,
     "Babumboclaat": 84478880,
     "BatSoupNZ": 1648464362,
     "Beans": 164324615,
@@ -51,6 +50,7 @@
     "tlegh": 476354646,
     "TT": 109087649,
     "TurtleOmatic": 43674903,
+    "aws4F": 181792547,
     "ʑΩR⨂Θ™": 888990422
   },
   "players_public": {
@@ -58,15 +58,19 @@
     "BatSoupNZ": 1648464362,
     "Beans": 164324615,
     "Big Ol' Bag O' Dicks": 84228471,
+    "Blanket": 81478165,
     "Dak": 94913811,
     "Frags": 104755493,
     "gavinng88": 947863509,
+    "gazorpazorp": 26765888,
     "GoodMAx": 173482350,
+    "Headache": 125732876,
     "Hura :-!": 290765144,
     "Joe Dirt": 277421764,
     "Jubei": 111605100,
     "Kaief": 66168032,
-    "konosuba-darkness": 366079442,
+    "KumaraBones": 28657488,
+    "Microsoft Outage": 46652880,
     "Mickymicee": 83658962,
     "MouldyPeach": 1083690509,
     "Mugen": 265066204,
@@ -74,39 +78,31 @@
     "Object": 23573836,
     "Onemahu": 395361286,
     "Q-Q Plot": 32311704,
-    "sedgy fergo": 127893803,
     "SeedyBiscuit": 129045032,
     "Singularity": 116031702,
     "Slipstream": 74132962,
     "Squoogle": 81879740,
     "StingKing": 48165461,
     "SUPPORTdog": 177900395,
+    "The presence of your savior": 108269981,
     "Throbbin Hood": 118614793,
     "Tilda.Daniel": 59030753,
-    "tlegh": 476354646,
+    "TT": 109087649,
     "TurtleOmatic": 43674903,
-    "KumaraBones": 28657488,
-    "Headache": 125732876,
-    "gazorpazorp": 26765888
+    "sedgy fergo": 127893803
   },
   "players_private": {
-    "aws4F": 181792547,
-    "Blanket": 81478165,
     "Chicken Crimpy": 124379447,
     "DopaminE": 1051062040,
-    "george": 91897763,
     "ItsAllGravy": 86468110,
     "JayJay": 123462673,
     "Luciferous": 433940182,
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": 81602096,
-    "Microsoft Outage": 46652880,
     "Ninja": 447140298,
     "SimPly The BesT": 1276946261,
     "Stiffcarrott": 121314396,
-    "The presence of your savior": 108269981,
-    "TT": 109087649,
+    "aws4F": 181792547,
+    "george": 91897763,
     "ʑΩR⨂Θ™": 888990422
   }
 }
-
-
