--- a/data/config.json
+++ b/data/config.json
@@ -1,108 +1,116 @@
+Perfect. I’ve rebuilt the config with exactly the 50 players from your PDF, and split them into `players_public` and `players_private` according to the “Public or Private” column.
+
+Here’s the full JSON for you to paste over the old one:
+
+```json
 {
   "test_mode": false,
   "webhook_enabled": true,
   "players": {
-    "Babumboclaat": 84478880,
-    "BatSoupNZ": 1648464362,
+    "ʑΩR⨂Θ™": 888990422,
+    "[BB]*MarumO™": 117009018,
+    "Asbeel": 294609894,
+    "banana": 182071552,
     "Beans": 164324615,
+    "Big Mak": 148133767,
     "Big Ol' Bag O' Dicks": 84228471,
+    "BlackShine": 91381170,
     "Blanket": 81478165,
-    "Chicken Crimpy": 124379447,
-    "Dak": 94913811,
     "DopaminE": 1051062040,
     "Frags": 104755493,
     "gavinng88": 947863509,
-    "gazorpazorp": 26765888,
     "george": 91897763,
-    "GoodMAx": 173482350,
     "Headache": 125732876,
-    "Hura :-!": 290765144,
-    "ItsAllGravy": 86468110,
     "JayJay": 123462673,
     "Joe Dirt": 277421764,
     "Jubei": 111605100,
     "Kaief": 66168032,
-    "konosuba-darkness": 366079442,
+    "keekaru": 312969498,
+    "Kmart Security": 121171351,
     "KumaraBones": 28657488,
-    "Luciferous": 433940182,
+    "LA": 187632658,
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": 81602096,
     "Mickymicee": 83658962,
     "Microsoft Outage": 46652880,
-    "MouldyPeach": 1083690509,
     "Mugen": 265066204,
-    "N3FA": 369151971,
-    "Ninja": 447140298,
+    "NZ Wolf": 92226250,
     "Object": 23573836,
+    "Oh you didn't know?": 343163699,
+    "ollyGC": 313047242,
     "Onemahu": 395361286,
+    "OWNZ.FearlessC": 67769239,
+    "Papa-Ohki #ReformedRager": 84403948,
     "Q-Q Plot": 32311704,
     "sedgy fergo": 127893803,
     "SeedyBiscuit": 129045032,
     "SimPly The BesT": 1276946261,
     "Singularity": 116031702,
     "Slipstream": 74132962,
-    "Squoogle": 81879740,
+    "Sneakyshrew": 60664337,
+    "Spizer": 56312210,
     "Stiffcarrott": 121314396,
     "StingKing": 48165461,
-    "SUPPORTdog": 177900395,
+    "sugar daddy": 84996142,
     "The presence of your savior": 108269981,
-    "Throbbin Hood": 118614793,
     "Tilda.Daniel": 59030753,
-    "tlegh": 476354646,
-    "TT": 109087649,
     "TurtleOmatic": 43674903,
-    "aws4F": 181792547,
-    "ʑΩR⨂Θ™": 888990422
+    "Tyrañt": 52996844,
+    "Veet": 52793449,
+    "Yippee ki-yay": 89774037
   },
   "players_public": {
-    "Babumboclaat": 84478880,
-    "BatSoupNZ": 1648464362,
+    "[BB]*MarumO™": 117009018,
+    "Asbeel": 294609894,
+    "banana": 182071552,
     "Beans": 164324615,
     "Big Ol' Bag O' Dicks": 84228471,
     "Blanket": 81478165,
-    "Dak": 94913811,
     "Frags": 104755493,
     "gavinng88": 947863509,
-    "gazorpazorp": 26765888,
-    "GoodMAx": 173482350,
     "Headache": 125732876,
-    "Hura :-!": 290765144,
     "Joe Dirt": 277421764,
     "Jubei": 111605100,
     "Kaief": 66168032,
+    "keekaru": 312969498,
     "KumaraBones": 28657488,
-    "Microsoft Outage": 46652880,
     "Mickymicee": 83658962,
-    "MouldyPeach": 1083690509,
+    "Microsoft Outage": 46652880,
     "Mugen": 265066204,
-    "N3FA": 369151971,
+    "NZ Wolf": 92226250,
     "Object": 23573836,
+    "Oh you didn't know?": 343163699,
+    "ollyGC": 313047242,
     "Onemahu": 395361286,
-    "Q-Q Plot": 32311704,
+    "OWNZ.FearlessC": 67769239,
+    "Papa-Ohki #ReformedRager": 84403948,
+    "sedgy fergo": 127893803,
     "SeedyBiscuit": 129045032,
     "Singularity": 116031702,
     "Slipstream": 74132962,
-    "Squoogle": 81879740,
+    "Spizer": 56312210,
     "StingKing": 48165461,
-    "SUPPORTdog": 177900395,
     "The presence of your savior": 108269981,
-    "Throbbin Hood": 118614793,
     "Tilda.Daniel": 59030753,
-    "TT": 109087649,
     "TurtleOmatic": 43674903,
-    "sedgy fergo": 127893803
+    "Veet": 52793449,
+    "Yippee ki-yay": 89774037
   },
   "players_private": {
-    "Chicken Crimpy": 124379447,
+    "ʑΩR⨂Θ™": 888990422,
+    "Big Mak": 148133767,
+    "BlackShine": 91381170,
     "DopaminE": 1051062040,
-    "ItsAllGravy": 86468110,
-    "JayJay": 123462673,
-    "Luciferous": 433940182,
-    "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": 81602096,
-    "Ninja": 447140298,
-    "SimPly The BesT": 1276946261,
-    "Stiffcarrott": 121314396,
-    "aws4F": 181792547,
     "george": 91897763,
-    "ʑΩR⨂Θ™": 888990422
+    "JayJay": 123462673,
+    "Kmart Security": 121171351,
+    "LA": 187632658,
+    "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": 81602096,
+    "Q-Q Plot": 32311704,
+    "SimPly The BesT": 1276946261,
+    "Sneakyshrew": 60664337,
+    "Stiffcarrott": 121314396,
+    "sugar daddy": 84996142,
+    "Tyrañt": 52996844
   }
 }
+```
