--- a/data/config.json
+++ b/data/config.json
@@ -2,39 +2,39 @@
   "test_mode": false,
   "webhook_enabled": true,
   "players": {
-    "ʑΩR⨂Θ™": 888990422,
     "[BB]*MarumO™": 117009018,
+    "aJo": 207115297,
+    "Arataka Reigen": 84395017,
     "Asbeel": 294609894,
     "banana": 182071552,
     "Beans": 164324615,
     "Big Mak": 148133767,
     "Big Ol' Bag O' Dicks": 84228471,
-    "BlackShine": 91381170,
     "Blanket": 81478165,
+    "Carrys Guardian": 917681627,
+    "Dak": 94913811,
     "DopaminE": 1051062040,
-    "Frags": 104755493,
+    "eejit": 106166453,
     "gavinng88": 947863509,
     "george": 91897763,
-    "Headache": 125732876,
+    "GreekGod": 100430947,
+    "ItsAllGravy": 86468110,
     "JayJay": 123462673,
-    "Joe Dirt": 277421764,
     "Jubei": 111605100,
     "Kaief": 66168032,
     "keekaru": 312969498,
-    "Kmart Security": 121171351,
     "KumaraBones": 28657488,
-    "LA": 187632658,
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": 81602096,
     "Mickymicee": 83658962,
     "Microsoft Outage": 46652880,
     "Mugen": 265066204,
     "NZ Wolf": 92226250,
     "Object": 23573836,
-    "Oh you didn't know?": 343163699,
     "ollyGC": 313047242,
     "Onemahu": 395361286,
     "OWNZ.FearlessC": 67769239,
-    "Papa-Ohki #ReformedRager": 84403948,
+    "Papa-Ohki": 84403948,
+    "popcorn": 39690322,
     "Q-Q Plot": 32311704,
     "sedgy fergo": 127893803,
     "SeedyBiscuit": 129045032,
@@ -50,20 +50,23 @@
     "Tilda.Daniel": 59030753,
     "TurtleOmatic": 43674903,
     "Tyrañt": 52996844,
-    "Veet": 52793449,
-    "Yippee ki-yay": 89774037
+    "WoTeFa": 426444446,
+    "Yippee ki-yay": 89774037,
+    "youtube.com": 914137224
   },
   "players_public": {
     "[BB]*MarumO™": 117009018,
+    "aJo": 207115297,
     "Asbeel": 294609894,
     "banana": 182071552,
     "Beans": 164324615,
     "Big Ol' Bag O' Dicks": 84228471,
     "Blanket": 81478165,
-    "Frags": 104755493,
+    "Carrys Guardian": 917681627,
+    "Dak": 94913811,
+    "eejit": 106166453,
     "gavinng88": 947863509,
-    "Headache": 125732876,
-    "Joe Dirt": 277421764,
+    "GreekGod": 100430947,
     "Jubei": 111605100,
     "Kaief": 66168032,
     "keekaru": 312969498,
@@ -73,11 +76,10 @@
     "Mugen": 265066204,
     "NZ Wolf": 92226250,
     "Object": 23573836,
-    "Oh you didn't know?": 343163699,
     "ollyGC": 313047242,
     "Onemahu": 395361286,
     "OWNZ.FearlessC": 67769239,
-    "Papa-Ohki #ReformedRager": 84403948,
+    "Papa-Ohki": 84403948,
     "sedgy fergo": 127893803,
     "SeedyBiscuit": 129045032,
     "Singularity": 116031702,
@@ -87,24 +89,24 @@
     "The presence of your savior": 108269981,
     "Tilda.Daniel": 59030753,
     "TurtleOmatic": 43674903,
-    "Veet": 52793449,
     "Yippee ki-yay": 89774037
   },
   "players_private": {
-    "ʑΩR⨂Θ™": 888990422,
+    "Arataka Reigen": 84395017,
     "Big Mak": 148133767,
-    "BlackShine": 91381170,
     "DopaminE": 1051062040,
     "george": 91897763,
+    "ItsAllGravy": 86468110,
     "JayJay": 123462673,
-    "Kmart Security": 121171351,
-    "LA": 187632658,
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": 81602096,
+    "popcorn": 39690322,
     "Q-Q Plot": 32311704,
     "SimPly The BesT": 1276946261,
     "Sneakyshrew": 60664337,
     "Stiffcarrott": 121314396,
     "sugar daddy": 84996142,
-    "Tyrañt": 52996844
+    "Tyrañt": 52996844,
+    "WoTeFa": 426444446,
+    "youtube.com": 914137224
   }
 }
