--- a/.github/workflows/render-keepalive.yml
+++ b/.github/workflows/render-keepalive.yml
@@ -1,1 +1,16 @@
+name: Render Keep Alive
+
+on:
+  schedule:
+    # Every 10 minutes (UTC)
+    - cron: "*/10 * * * *"
+  workflow_dispatch: {}  # allows manual runs
+
+jobs:
+  ping-render:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Ping Render /run endpoint
+        run: |
+          curl -sS https://bot-wsoq.onrender.com/run || echo "Ping failed"
 
