--- a/data/config.json
+++ b/data/config.json
@@ -1,6 +1,7 @@
 {
   "test_mode": false,
   "webhook_enabled": true,
+
   "players": {
     "[BB]*MarumO™": 117009018,
     "aJo": 207115297,
@@ -30,7 +31,7 @@
     "Mugen": 265066204,
     "NZ Wolf": 92226250,
     "Object": 23573836,
-    "ollyGC": 313047242,
+    "olly": 313047242,
     "Onemahu": 395361286,
     "OWNZ.FearlessC": 67769239,
     "Papa-Ohki": 84403948,
@@ -45,7 +46,6 @@
     "Spizer": 56312210,
     "Stiffcarrott": 121314396,
     "StingKing": 48165461,
-    "sugar daddy": 84996142,
     "The presence of your savior": 108269981,
     "Tilda.Daniel": 59030753,
     "TurtleOmatic": 43674903,
@@ -54,6 +54,7 @@
     "Yippee ki-yay": 89774037,
     "youtube.com": 914137224
   },
+
   "players_public": {
     "[BB]*MarumO™": 117009018,
     "aJo": 207115297,
@@ -76,10 +77,11 @@
     "Mugen": 265066204,
     "NZ Wolf": 92226250,
     "Object": 23573836,
-    "ollyGC": 313047242,
+    "olly": 313047242,
     "Onemahu": 395361286,
     "OWNZ.FearlessC": 67769239,
     "Papa-Ohki": 84403948,
+    "popcorn": 39690322,
     "sedgy fergo": 127893803,
     "SeedyBiscuit": 129045032,
     "Singularity": 116031702,
@@ -91,6 +93,7 @@
     "TurtleOmatic": 43674903,
     "Yippee ki-yay": 89774037
   },
+
   "players_private": {
     "Arataka Reigen": 84395017,
     "Big Mak": 148133767,
@@ -99,14 +102,65 @@
     "ItsAllGravy": 86468110,
     "JayJay": 123462673,
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": 81602096,
-    "popcorn": 39690322,
     "Q-Q Plot": 32311704,
     "SimPly The BesT": 1276946261,
     "Sneakyshrew": 60664337,
     "Stiffcarrott": 121314396,
-    "sugar daddy": 84996142,
     "Tyrañt": 52996844,
     "WoTeFa": 426444446,
     "youtube.com": 914137224
+  },
+
+  "discord_ids": {
+    "[BB]*MarumO™": "359269121776680960",
+    "aJo": "",
+    "Arataka Reigen": "",
+    "Asbeel": "419371954936610816",
+    "banana": "810589627395342346",
+    "Beans": "253015798141026305",
+    "Big Mak": "914756719408734259",
+    "Big Ol' Bag O' Dicks": "308145461183643650",
+    "Blanket": "1094843096082170019",
+    "Carrys Guardian": "200622819753590784",
+    "Dak": "519769207387193356",
+    "DopaminE": "",
+    "eejit": "252308128224247809",
+    "gavinng88": "794876046473428992",
+    "george": "169686077735567360",
+    "GreekGod": "",
+    "ItsAllGravy": "407725964114788362",
+    "JayJay": "",
+    "Jubei": "864453599656542219",
+    "Kaief": "1376795516213530666",
+    "keekaru": "",
+    "KumaraBones": "698833044282409021",
+    "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": "125455985253941248",
+    "Mickymicee": "503704855177855007",
+    "Microsoft Outage": "363357919674236929",
+    "Mugen": "336862389289091076",
+    "NZ Wolf": "180972773630410752",
+    "Object": "938009698706268180",
+    "olly": "694781374472650803",
+    "Onemahu": "1252059053555847265",
+    "OWNZ.FearlessC": "",
+    "Papa-Ohki": "263267489981530112",
+    "popcorn": "444430851586129921",
+    "Q-Q Plot": "531067348690534400",
+    "sedgy fergo": "",
+    "SeedyBiscuit": "103395740449017856",
+    "SimPly The BesT": "969156449496363028",
+    "Singularity": "500449934122942465",
+    "Slipstream": "847062650479312926",
+    "Sneakyshrew": "305284165790859284",
+    "Spizer": "706062386745835541",
+    "Stiffcarrott": "",
+    "StingKing": "241657005624786955",
+    "The presence of your savior": "",
+    "Tilda.Daniel": "384905578180247564",
+    "TurtleOmatic": "365438351634857985",
+    "Tyrañt": "630581207213801489",
+    "WoTeFa": "860438012857286688",
+    "Yippee ki-yay": "684311501263208448",
+    "youtube.com": ""
   }
 }
