--- a/data/config.json
+++ b/data/config.json
@@ -154,7 +154,7 @@
     "Sneakyshrew": "305284165790859284",
     "Spizer": "706062386745835541",
     "Stiffcarrott": "",
-    "StingKing": "241657005624786955",
+    "StingKing": "",
     "The presence of your savior": "",
     "Tilda.Daniel": "384905578180247564",
     "TurtleOmatic": "365438351634857985",
@@ -164,3 +164,4 @@
     "youtube.com": ""
   }
 }
+
