--- a/data/config.json
+++ b/data/config.json
@@ -135,7 +135,7 @@
     "keekaru": "",
     "KumaraBones": "698833044282409021",
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": "125455985253941248",
-    "Mickymicee": "503704855177855007",
+    "Mickymicee": "",
     "Microsoft Outage": "363357919674236929",
     "Mugen": "336862389289091076",
     "NZ Wolf": "180972773630410752",
@@ -164,4 +164,5 @@
     "youtube.com": ""
   }
 }
+
 
