--- a/data/config.json
+++ b/data/config.json
@@ -12,7 +12,6 @@
     "Big Mak": 148133767,
     "Big Ol' Bag O' Dicks": 84228471,
     "Blanket": 81478165,
-    "Carrys Guardian": 917681627,
     "Dak": 94913811,
     "DopaminE": 1051062040,
     "eejit": 106166453,
@@ -28,14 +27,15 @@
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": 81602096,
     "Mickymicee": 83658962,
     "Microsoft Outage": 46652880,
+    "Mike Hunt": 1621701595,
     "Mugen": 265066204,
+    "Nice tie!": 914137224,
     "NZ Wolf": 92226250,
     "Object": 23573836,
-    "olly": 313047242,
-    "Onemahu": 395361286,
     "OWNZ.FearlessC": 67769239,
     "Papa-Ohki": 84403948,
     "popcorn": 39690322,
+    "pumpking": 86737626,
     "Q-Q Plot": 32311704,
     "sedgy fergo": 127893803,
     "SeedyBiscuit": 129045032,
@@ -43,27 +43,26 @@
     "Singularity": 116031702,
     "Slipstream": 74132962,
     "Sneakyshrew": 60664337,
-    "Spizer": 56312210,
-    "Stiffcarrott": 121314396,
     "StingKing": 48165461,
     "The presence of your savior": 108269981,
+    "TheSprat": 996716891,
     "Tilda.Daniel": 59030753,
     "TurtleOmatic": 43674903,
     "Tyrañt": 52996844,
     "WoTeFa": 426444446,
-    "Yippee ki-yay": 89774037,
-    "youtube.com": 914137224
+    "Yippee ki-yay": 89774037
   },
 
   "players_public": {
     "[BB]*MarumO™": 117009018,
     "aJo": 207115297,
+    "Arataka Reigen": 84395017,
     "Asbeel": 294609894,
     "banana": 182071552,
     "Beans": 164324615,
+    "Big Mak": 148133767,
     "Big Ol' Bag O' Dicks": 84228471,
     "Blanket": 81478165,
-    "Carrys Guardian": 917681627,
     "Dak": 94913811,
     "eejit": 106166453,
     "gavinng88": 947863509,
@@ -77,8 +76,6 @@
     "Mugen": 265066204,
     "NZ Wolf": 92226250,
     "Object": 23573836,
-    "olly": 313047242,
-    "Onemahu": 395361286,
     "OWNZ.FearlessC": 67769239,
     "Papa-Ohki": 84403948,
     "popcorn": 39690322,
@@ -86,7 +83,6 @@
     "SeedyBiscuit": 129045032,
     "Singularity": 116031702,
     "Slipstream": 74132962,
-    "Spizer": 56312210,
     "StingKing": 48165461,
     "The presence of your savior": 108269981,
     "Tilda.Daniel": 59030753,
@@ -95,33 +91,32 @@
   },
 
   "players_private": {
-    "Arataka Reigen": 84395017,
-    "Big Mak": 148133767,
     "DopaminE": 1051062040,
     "george": 91897763,
     "ItsAllGravy": 86468110,
     "JayJay": 123462673,
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": 81602096,
+    "Mike Hunt": 1621701595,
+    "Nice tie!": 914137224,
+    "pumpking": 86737626,
     "Q-Q Plot": 32311704,
     "SimPly The BesT": 1276946261,
     "Sneakyshrew": 60664337,
-    "Stiffcarrott": 121314396,
+    "TheSprat": 996716891,
     "Tyrañt": 52996844,
-    "WoTeFa": 426444446,
-    "youtube.com": 914137224
+    "WoTeFa": 426444446
   },
 
   "discord_ids": {
     "[BB]*MarumO™": "359269121776680960",
     "aJo": "",
-    "Arataka Reigen": "",
+    "Arataka Reigen": "215353733343739904",
     "Asbeel": "419371954936610816",
     "banana": "810589627395342346",
     "Beans": "253015798141026305",
     "Big Mak": "914756719408734259",
     "Big Ol' Bag O' Dicks": "308145461183643650",
     "Blanket": "1094843096082170019",
-    "Carrys Guardian": "200622819753590784",
     "Dak": "519769207387193356",
     "DopaminE": "",
     "eejit": "252308128224247809",
@@ -137,14 +132,15 @@
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": "125455985253941248",
     "Mickymicee": "",
     "Microsoft Outage": "363357919674236929",
+    "Mike Hunt": "",
     "Mugen": "336862389289091076",
+    "Nice tie!": "",
     "NZ Wolf": "180972773630410752",
     "Object": "938009698706268180",
-    "olly": "694781374472650803",
-    "Onemahu": "1252059053555847265",
     "OWNZ.FearlessC": "",
     "Papa-Ohki": "263267489981530112",
     "popcorn": "444430851586129921",
+    "pumpking": "",
     "Q-Q Plot": "531067348690534400",
     "sedgy fergo": "",
     "SeedyBiscuit": "103395740449017856",
@@ -152,17 +148,13 @@
     "Singularity": "500449934122942465",
     "Slipstream": "847062650479312926",
     "Sneakyshrew": "305284165790859284",
-    "Spizer": "706062386745835541",
-    "Stiffcarrott": "",
     "StingKing": "",
-    "The presence of your savior": "",
+    "The presence of your savior": "410444687434973190",
+    "TheSprat": "377961737284091905",
     "Tilda.Daniel": "384905578180247564",
     "TurtleOmatic": "365438351634857985",
     "Tyrañt": "630581207213801489",
     "WoTeFa": "860438012857286688",
-    "Yippee ki-yay": "684311501263208448",
-    "youtube.com": ""
+    "Yippee ki-yay": "684311501263208448"
   }
 }
-
-
