--- a/data/config.json
+++ b/data/config.json
@@ -43,7 +43,7 @@
     "Singularity": 116031702,
     "Slipstream": 74132962,
     "Sneakyshrew": 60664337,
-    "StingKing": 48165461,
+    "Stinky": 48165461,
     "The presence of your savior": 108269981,
     "TheSprat": 996716891,
     "Tilda.Daniel": 59030753,
@@ -158,3 +158,4 @@
     "Yippee ki-yay": "684311501263208448"
   }
 }
+
