--- a/data/config.json
+++ b/data/config.json
@@ -28,6 +28,7 @@
     "Mickymicee": 83658962,
     "Microsoft Outage": 46652880,
     "Mike Hunt": 1621701595,
+    "Morphs": 86604006,
     "Mugen": 265066204,
     "Nice tie!": 914137224,
     "NZ Wolf": 92226250,
@@ -73,6 +74,7 @@
     "KumaraBones": 28657488,
     "Mickymicee": 83658962,
     "Microsoft Outage": 46652880,
+    "Morphs": 86604006,
     "Mugen": 265066204,
     "NZ Wolf": 92226250,
     "Object": 23573836,
@@ -83,7 +85,7 @@
     "SeedyBiscuit": 129045032,
     "Singularity": 116031702,
     "Slipstream": 74132962,
-    "StingKing": 48165461,
+    "Stinky": 48165461,
     "The presence of your savior": 108269981,
     "Tilda.Daniel": 59030753,
     "TurtleOmatic": 43674903,
@@ -133,6 +135,7 @@
     "Mickymicee": "",
     "Microsoft Outage": "363357919674236929",
     "Mike Hunt": "",
+    "Morphs": "242079662530887680",
     "Mugen": "336862389289091076",
     "Nice tie!": "",
     "NZ Wolf": "180972773630410752",
@@ -148,7 +151,7 @@
     "Singularity": "500449934122942465",
     "Slipstream": "847062650479312926",
     "Sneakyshrew": "305284165790859284",
-    "StingKing": "",
+    "Stinky": "",
     "The presence of your savior": "410444687434973190",
     "TheSprat": "377961737284091905",
     "Tilda.Daniel": "384905578180247564",
@@ -158,4 +161,3 @@
     "Yippee ki-yay": "684311501263208448"
   }
 }
-
