--- a/data/config.json
+++ b/data/config.json
@@ -50,6 +50,7 @@
     "Tilda.Daniel": 59030753,
     "TurtleOmatic": 43674903,
     "Tyrañt": 52996844,
+    "WhiteWolf": 1853597338,
     "WoTeFa": 426444446,
     "Yippee ki-yay": 89774037
   },
@@ -106,6 +107,7 @@
     "Sneakyshrew": 60664337,
     "TheSprat": 996716891,
     "Tyrañt": 52996844,
+    "WhiteWolf": 1853597338,
     "WoTeFa": 426444446
   },
 
@@ -157,7 +159,9 @@
     "Tilda.Daniel": "384905578180247564",
     "TurtleOmatic": "365438351634857985",
     "Tyrañt": "630581207213801489",
+    "WhiteWolf": ""
     "WoTeFa": "860438012857286688",
     "Yippee ki-yay": "684311501263208448"
   }
 }
+
