--- a/data/config.json
+++ b/data/config.json
@@ -159,9 +159,8 @@
     "Tilda.Daniel": "384905578180247564",
     "TurtleOmatic": "365438351634857985",
     "Tyrañt": "630581207213801489",
-    "WhiteWolf": ""
+    "WhiteWolf": "",
     "WoTeFa": "860438012857286688",
     "Yippee ki-yay": "684311501263208448"
   }
 }
-
