--- a/data/config.json
+++ b/data/config.json
@@ -44,7 +44,7 @@
     "Singularity": 116031702,
     "Slipstream": 74132962,
     "Sneakyshrew": 60664337,
-    "⁠S​t‍і‌n​g⁠K‍i‌n​g⁠": 48165461,
+    "StingKing": 48165461,
     "The presence of your savior": 108269981,
     "TheSprat": 996716891,
     "Tilda.Daniel": 59030753,
@@ -164,4 +164,5 @@
     "Yippee ki-yay": "684311501263208448"
   }
 }
+
 
