--- a/data/config.json
+++ b/data/config.json
@@ -4,17 +4,16 @@
 
   "players": {
     "[BB]*MarumO™": 117009018,
-    "aJo": 207115297,
     "Arataka Reigen": 84395017,
     "Asbeel": 294609894,
     "banana": 182071552,
-    "Beans": 164324615,
     "Big Mak": 148133767,
     "Big Ol' Bag O' Dicks": 84228471,
     "Blanket": 81478165,
     "Dak": 94913811,
     "DopaminE": 1051062040,
     "eejit": 106166453,
+    "enjin": 317627198,
     "gavinng88": 947863509,
     "george": 91897763,
     "GreekGod": 100430947,
@@ -29,12 +28,10 @@
     "Microsoft Outage": 46652880,
     "Mike Hunt": 1621701595,
     "Morphs": 86604006,
-    "Mugen": 265066204,
     "Nice tie!": 914137224,
     "NZ Wolf": 92226250,
     "Object": 23573836,
     "OWNZ.FearlessC": 67769239,
-    "Papa-Ohki": 84403948,
     "popcorn": 39690322,
     "pumpking": 86737626,
     "Q-Q Plot": 32311704,
@@ -57,11 +54,9 @@
 
   "players_public": {
     "[BB]*MarumO™": 117009018,
-    "aJo": 207115297,
     "Arataka Reigen": 84395017,
     "Asbeel": 294609894,
     "banana": 182071552,
-    "Beans": 164324615,
     "Big Mak": 148133767,
     "Big Ol' Bag O' Dicks": 84228471,
     "Blanket": 81478165,
@@ -76,17 +71,15 @@
     "Mickymicee": 83658962,
     "Microsoft Outage": 46652880,
     "Morphs": 86604006,
-    "Mugen": 265066204,
     "NZ Wolf": 92226250,
     "Object": 23573836,
     "OWNZ.FearlessC": 67769239,
-    "Papa-Ohki": 84403948,
     "popcorn": 39690322,
     "sedgy fergo": 127893803,
     "SeedyBiscuit": 129045032,
     "Singularity": 116031702,
     "Slipstream": 74132962,
-    "Stinky": 48165461,
+    "StingKing": 48165461,
     "The presence of your savior": 108269981,
     "Tilda.Daniel": 59030753,
     "TurtleOmatic": 43674903,
@@ -95,6 +88,7 @@
 
   "players_private": {
     "DopaminE": 1051062040,
+    "enjin": 317627198,
     "george": 91897763,
     "ItsAllGravy": 86468110,
     "JayJay": 123462673,
@@ -113,17 +107,16 @@
 
   "discord_ids": {
     "[BB]*MarumO™": "359269121776680960",
-    "aJo": "",
     "Arataka Reigen": "215353733343739904",
     "Asbeel": "419371954936610816",
     "banana": "810589627395342346",
-    "Beans": "253015798141026305",
     "Big Mak": "914756719408734259",
     "Big Ol' Bag O' Dicks": "308145461183643650",
     "Blanket": "1094843096082170019",
     "Dak": "519769207387193356",
     "DopaminE": "",
     "eejit": "252308128224247809",
+    "enjin": "",
     "gavinng88": "794876046473428992",
     "george": "169686077735567360",
     "GreekGod": "",
@@ -138,12 +131,10 @@
     "Microsoft Outage": "363357919674236929",
     "Mike Hunt": "",
     "Morphs": "242079662530887680",
-    "Mugen": "336862389289091076",
     "Nice tie!": "",
     "NZ Wolf": "180972773630410752",
     "Object": "938009698706268180",
     "OWNZ.FearlessC": "",
-    "Papa-Ohki": "263267489981530112",
     "popcorn": "444430851586129921",
     "pumpking": "",
     "Q-Q Plot": "531067348690534400",
@@ -153,7 +144,7 @@
     "Singularity": "500449934122942465",
     "Slipstream": "847062650479312926",
     "Sneakyshrew": "305284165790859284",
-    "Stinky": "",
+    "StingKing": "",
     "The presence of your savior": "410444687434973190",
     "TheSprat": "377961737284091905",
     "Tilda.Daniel": "384905578180247564",
@@ -164,5 +155,3 @@
     "Yippee ki-yay": "684311501263208448"
   }
 }
-
-
