--- a/data/config.json
+++ b/data/config.json
@@ -24,6 +24,7 @@
     "keekaru": 312969498,
     "KumaraBones": 28657488,
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": 81602096,
+    "Maduro Maraku": 120676511,
     "Mickymicee": 83658962,
     "Microsoft Outage": 46652880,
     "Mike Hunt": 1621701595,
@@ -68,6 +69,7 @@
     "Kaief": 66168032,
     "keekaru": 312969498,
     "KumaraBones": 28657488,
+    "Maduro Maraku": 120676511,
     "Mickymicee": 83658962,
     "Microsoft Outage": 46652880,
     "Morphs": 86604006,
@@ -127,9 +129,10 @@
     "keekaru": "",
     "KumaraBones": "698833044282409021",
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": "125455985253941248",
+    "Maduro Maraku": "",
     "Mickymicee": "",
     "Microsoft Outage": "363357919674236929",
-    "Mike Hunt": "",
+    "Mike Hunt": "398098674040832000",
     "Morphs": "242079662530887680",
     "Nice tie!": "",
     "NZ Wolf": "180972773630410752",
