--- a/data/config.json
+++ b/data/config.json
@@ -25,6 +25,7 @@
     "KumaraBones": 28657488,
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": 81602096,
     "Maduro Maraku": 120676511,
+    "Matt.": 322238627,
     "Mickymicee": 83658962,
     "Microsoft Outage": 46652880,
     "Mike Hunt": 1621701595,
@@ -42,6 +43,7 @@
     "Singularity": 116031702,
     "Slipstream": 74132962,
     "Sneakyshrew": 60664337,
+    "SpiritWolf": 87669343,
     "StingKing": 48165461,
     "The presence of your savior": 108269981,
     "TheSprat": 996716891,
@@ -70,6 +72,7 @@
     "keekaru": 312969498,
     "KumaraBones": 28657488,
     "Maduro Maraku": 120676511,
+    "Matt.": 322238627,
     "Mickymicee": 83658962,
     "Microsoft Outage": 46652880,
     "Morphs": 86604006,
@@ -101,6 +104,7 @@
     "Q-Q Plot": 32311704,
     "SimPly The BesT": 1276946261,
     "Sneakyshrew": 60664337,
+    "SpiritWolf": 87669343,
     "TheSprat": 996716891,
     "Tyrañt": 52996844,
     "WhiteWolf": 1853597338,
@@ -118,7 +122,7 @@
     "Dak": "519769207387193356",
     "DopaminE": "",
     "eejit": "252308128224247809",
-    "enjin": "",
+    "enjin": "287610982078087169",
     "gavinng88": "794876046473428992",
     "george": "169686077735567360",
     "GreekGod": "",
@@ -130,6 +134,7 @@
     "KumaraBones": "698833044282409021",
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": "125455985253941248",
     "Maduro Maraku": "",
+    "Matt.": "",
     "Mickymicee": "",
     "Microsoft Outage": "363357919674236929",
     "Mike Hunt": "398098674040832000",
@@ -147,6 +152,7 @@
     "Singularity": "500449934122942465",
     "Slipstream": "847062650479312926",
     "Sneakyshrew": "305284165790859284",
+    "SpiritWolf": "209119061639036939",
     "StingKing": "",
     "The presence of your savior": "410444687434973190",
     "TheSprat": "377961737284091905",
