--- a/data/config.json
+++ b/data/config.json
@@ -7,29 +7,24 @@
     "Arataka Reigen": 84395017,
     "Asbeel": 294609894,
     "banana": 182071552,
-    "Big Mak": 148133767,
+    "Beans": 164324615,
     "Big Ol' Bag O' Dicks": 84228471,
     "Blanket": 81478165,
-    "Dak": 94913811,
     "DopaminE": 1051062040,
     "eejit": 106166453,
-    "enjin": 317627198,
     "gavinng88": 947863509,
     "george": 91897763,
     "GreekGod": 100430947,
     "ItsAllGravy": 86468110,
     "JayJay": 123462673,
     "Jubei": 111605100,
-    "Kaief": 66168032,
-    "keekaru": 312969498,
     "KumaraBones": 28657488,
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": 81602096,
     "Maduro Maraku": 120676511,
     "Matt.": 322238627,
-    "Mickymicee": 83658962,
     "Microsoft Outage": 46652880,
     "Mike Hunt": 1621701595,
-    "Morphs": 86604006,
+    "Mugen": 265066204,
     "Nice tie!": 914137224,
     "NZ Wolf": 92226250,
     "Object": 23573836,
@@ -43,14 +38,14 @@
     "Singularity": 116031702,
     "Slipstream": 74132962,
     "Sneakyshrew": 60664337,
-    "SpiritWolf": 87669343,
+    "Squoogle": 81879740,
     "StingKing": 48165461,
     "The presence of your savior": 108269981,
-    "TheSprat": 996716891,
     "Tilda.Daniel": 59030753,
     "TurtleOmatic": 43674903,
     "Tyrañt": 52996844,
     "WhiteWolf": 1853597338,
+    "WORM": 1254668304,
     "WoTeFa": 426444446,
     "Yippee ki-yay": 89774037
   },
@@ -60,22 +55,18 @@
     "Arataka Reigen": 84395017,
     "Asbeel": 294609894,
     "banana": 182071552,
-    "Big Mak": 148133767,
+    "Beans": 164324615,
     "Big Ol' Bag O' Dicks": 84228471,
     "Blanket": 81478165,
-    "Dak": 94913811,
     "eejit": 106166453,
     "gavinng88": 947863509,
     "GreekGod": 100430947,
     "Jubei": 111605100,
-    "Kaief": 66168032,
-    "keekaru": 312969498,
     "KumaraBones": 28657488,
     "Maduro Maraku": 120676511,
     "Matt.": 322238627,
-    "Mickymicee": 83658962,
     "Microsoft Outage": 46652880,
-    "Morphs": 86604006,
+    "Mugen": 265066204,
     "NZ Wolf": 92226250,
     "Object": 23573836,
     "OWNZ.FearlessC": 67769239,
@@ -84,6 +75,7 @@
     "SeedyBiscuit": 129045032,
     "Singularity": 116031702,
     "Slipstream": 74132962,
+    "Squoogle": 81879740,
     "StingKing": 48165461,
     "The presence of your savior": 108269981,
     "Tilda.Daniel": 59030753,
@@ -93,7 +85,6 @@
 
   "players_private": {
     "DopaminE": 1051062040,
-    "enjin": 317627198,
     "george": 91897763,
     "ItsAllGravy": 86468110,
     "JayJay": 123462673,
@@ -104,10 +95,9 @@
     "Q-Q Plot": 32311704,
     "SimPly The BesT": 1276946261,
     "Sneakyshrew": 60664337,
-    "SpiritWolf": 87669343,
-    "TheSprat": 996716891,
     "Tyrañt": 52996844,
     "WhiteWolf": 1853597338,
+    "WORM": 1254668304,
     "WoTeFa": 426444446
   },
 
@@ -116,29 +106,24 @@
     "Arataka Reigen": "215353733343739904",
     "Asbeel": "419371954936610816",
     "banana": "810589627395342346",
-    "Big Mak": "914756719408734259",
+    "Beans": "253015798141026305",
     "Big Ol' Bag O' Dicks": "308145461183643650",
     "Blanket": "1094843096082170019",
-    "Dak": "519769207387193356",
     "DopaminE": "",
     "eejit": "252308128224247809",
-    "enjin": "287610982078087169",
     "gavinng88": "794876046473428992",
     "george": "169686077735567360",
     "GreekGod": "",
     "ItsAllGravy": "407725964114788362",
     "JayJay": "",
     "Jubei": "864453599656542219",
-    "Kaief": "1376795516213530666",
-    "keekaru": "",
     "KumaraBones": "698833044282409021",
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": "125455985253941248",
     "Maduro Maraku": "",
     "Matt.": "",
-    "Mickymicee": "",
     "Microsoft Outage": "363357919674236929",
     "Mike Hunt": "398098674040832000",
-    "Morphs": "242079662530887680",
+    "Mugen": "336862389289091076",
     "Nice tie!": "",
     "NZ Wolf": "180972773630410752",
     "Object": "938009698706268180",
@@ -152,14 +137,14 @@
     "Singularity": "500449934122942465",
     "Slipstream": "847062650479312926",
     "Sneakyshrew": "305284165790859284",
-    "SpiritWolf": "209119061639036939",
+    "Squoogle": "272973121794080768",
     "StingKing": "",
     "The presence of your savior": "410444687434973190",
-    "TheSprat": "377961737284091905",
     "Tilda.Daniel": "384905578180247564",
     "TurtleOmatic": "365438351634857985",
     "Tyrañt": "630581207213801489",
     "WhiteWolf": "",
+    "WORM": "643016452458283019",
     "WoTeFa": "860438012857286688",
     "Yippee ki-yay": "684311501263208448"
   }
