--- a/data/config.json
+++ b/data/config.json
@@ -10,17 +10,20 @@
     "Beans": 164324615,
     "Big Ol' Bag O' Dicks": 84228471,
     "Blanket": 81478165,
+    "BuckMickShot": 325069952,
+    "chibichabi23": 1907440036,
+    "Dark Star": 120676511,
     "DopaminE": 1051062040,
     "eejit": 106166453,
     "gavinng88": 947863509,
     "george": 91897763,
     "GreekGod": 100430947,
+    "hammo": 781136,
     "ItsAllGravy": 86468110,
     "JayJay": 123462673,
     "Jubei": 111605100,
     "KumaraBones": 28657488,
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": 81602096,
-    "Maduro Maraku": 120676511,
     "Matt.": 322238627,
     "Microsoft Outage": 46652880,
     "Mike Hunt": 1621701595,
@@ -28,10 +31,11 @@
     "Nice tie!": 914137224,
     "NZ Wolf": 92226250,
     "Object": 23573836,
+    "OTi": 142063552,
     "OWNZ.FearlessC": 67769239,
     "popcorn": 39690322,
-    "pumpking": 86737626,
     "Q-Q Plot": 32311704,
+    "Saifera": 87669343,
     "sedgy fergo": 127893803,
     "SeedyBiscuit": 129045032,
     "SimPly The BesT": 1276946261,
@@ -42,6 +46,7 @@
     "StingKing": 48165461,
     "The presence of your savior": 108269981,
     "Tilda.Daniel": 59030753,
+    "toaster": 86737626,
     "TurtleOmatic": 43674903,
     "Tyrañt": 52996844,
     "WhiteWolf": 1853597338,
@@ -58,12 +63,13 @@
     "Beans": 164324615,
     "Big Ol' Bag O' Dicks": 84228471,
     "Blanket": 81478165,
+    "BuckMickShot": 325069952,
+    "Dark Star": 120676511,
     "eejit": 106166453,
     "gavinng88": 947863509,
     "GreekGod": 100430947,
     "Jubei": 111605100,
     "KumaraBones": 28657488,
-    "Maduro Maraku": 120676511,
     "Matt.": 322238627,
     "Microsoft Outage": 46652880,
     "Mugen": 265066204,
@@ -71,6 +77,7 @@
     "Object": 23573836,
     "OWNZ.FearlessC": 67769239,
     "popcorn": 39690322,
+    "Saifera": 87669343,
     "sedgy fergo": 127893803,
     "SeedyBiscuit": 129045032,
     "Singularity": 116031702,
@@ -84,17 +91,20 @@
   },
 
   "players_private": {
+    "chibichabi23": 1907440036,
     "DopaminE": 1051062040,
     "george": 91897763,
+    "hammo": 781136,
     "ItsAllGravy": 86468110,
     "JayJay": 123462673,
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": 81602096,
     "Mike Hunt": 1621701595,
     "Nice tie!": 914137224,
-    "pumpking": 86737626,
+    "OTi": 142063552,
     "Q-Q Plot": 32311704,
     "SimPly The BesT": 1276946261,
     "Sneakyshrew": 60664337,
+    "toaster": 86737626,
     "Tyrañt": 52996844,
     "WhiteWolf": 1853597338,
     "WORM": 1254668304,
@@ -109,17 +119,20 @@
     "Beans": "253015798141026305",
     "Big Ol' Bag O' Dicks": "308145461183643650",
     "Blanket": "1094843096082170019",
+    "BuckMickShot": "299134408756297729",
+    "chibichabi23": "",
+    "Dark Star": "",
     "DopaminE": "",
     "eejit": "252308128224247809",
     "gavinng88": "794876046473428992",
     "george": "169686077735567360",
     "GreekGod": "",
+    "hammo": "135328270618066944",
     "ItsAllGravy": "407725964114788362",
     "JayJay": "",
     "Jubei": "864453599656542219",
     "KumaraBones": "698833044282409021",
     "LunchyyyYYyyyYyYyyyYYYyYyyYyyyYy": "125455985253941248",
-    "Maduro Maraku": "",
     "Matt.": "",
     "Microsoft Outage": "363357919674236929",
     "Mike Hunt": "398098674040832000",
@@ -127,10 +140,11 @@
     "Nice tie!": "",
     "NZ Wolf": "180972773630410752",
     "Object": "938009698706268180",
+    "OTi": "",
     "OWNZ.FearlessC": "",
     "popcorn": "444430851586129921",
-    "pumpking": "",
     "Q-Q Plot": "531067348690534400",
+    "Saifera": "209119061639036939",
     "sedgy fergo": "",
     "SeedyBiscuit": "103395740449017856",
     "SimPly The BesT": "969156449496363028",
@@ -141,6 +155,7 @@
     "StingKing": "",
     "The presence of your savior": "410444687434973190",
     "Tilda.Daniel": "384905578180247564",
+    "toaster": "",
     "TurtleOmatic": "365438351634857985",
     "Tyrañt": "630581207213801489",
     "WhiteWolf": "",
